--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
         <div class="header">
             <div class="logo">LOGO</div>
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Profile</a></li>
                 <li><a href="#">Settings</a></li>
+                <li><a href="#">About</a></li>
             </ul>
+        </div>
+        <div class="hero">
+            <div class="hero-txt">
+                <div class="main-txt">This website is awesome</div>
+                <div class="sec-txt">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button>Sign up</button>
+            </div>
+            <div class="img-hold">this is a place holder for an image</div>
         </div>
     </body>
 </html>
