Add necessary containers for content area
Added the containers and elements for the content
section, also made the side padding of header and
hero the same to make it even on the page.

--- a/index.html
+++ b/index.html
@@ -10,18 +10,38 @@
         <div class="header">
             <div class="logo">LOGO</div>
             <ul>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Settings</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">I</a></li>
+                <li><a href="#">Love</a></li>
+                <li><a href="#">My</a></li>
+                <li><a href="#">Family</a></li>
             </ul>
         </div>
         <div class="hero">
             <div class="hero-txt">
-                <div class="main-txt">This website is awesome</div>
+                <div class="main-txt">This family is awesome</div>
                 <div class="sec-txt">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                 <button>Sign up</button>
             </div>
             <div class="img-hold">this is a place holder for an image</div>
+        </div>
+        <div class="memo-head">Our best memories</div>
+        <div class="content">
+            <div class="info">
+                <div class="memo-img"></div>
+                <div class="img-txt">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="memo-img"></div>
+                <div class="img-txt">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="memo-img"></div>
+                <div class="img-txt">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="memo-img"></div>
+                <div class="img-txt">This is some subtext under an illustration or image</div>
+            </div>
         </div>
     </body>
 </html>
