Add quote section
Added the elements and containers for the quote
section, also add the quote and background color.

--- a/index.html
+++ b/index.html
@@ -43,5 +43,9 @@
                 <div class="img-txt">This is some subtext under an illustration or image</div>
             </div>
         </div>
+        <div class="quote">
+            <div class="quote-txt">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? I all know is that it looks nice.</div>
+            <div class="quote-author">Thor, God of Thunder</div>
+        </div>
     </body>
 </html>
