Center img hold message on hero section
Centered the message inside the holding container.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <div class="sec-txt">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                 <button>Sign up</button>
             </div>
-            <div class="img-hold">this is a place holder for an image</div>
+            <div class="img-hold">
+                <div>this is a place holder for an image</div>
+            </div>
         </div>
         <div class="memo-head">Our best memories</div>
         <div class="content">
