--- a/index.html
+++ b/index.html
@@ -49,5 +49,12 @@
             <div class="quote-txt">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? I all know is that it looks nice.</div>
             <div class="quote-author">-Thor, God of Thunder</div>
         </div>
+        <div class="action-con">
+            <div class="action">
+                <div class="action-head">Call to action!It's time</div>
+                <div class="action-sub">Sign up for our product by clicking that button right over there!</div>
+                <button>Sign up</button>
+            </div>
+        </div>
     </body>
 </html>
