Add footer container and content to page

--- a/index.html
+++ b/index.html
@@ -56,5 +56,8 @@
                 <button>Sign up</button>
             </div>
         </div>
+        <div class="footer">
+            <div class="foot-txt">Copyright © Mateus Santos 2025</div>
+        </div>
     </body>
 </html>
