--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
         <div class="action-con">
             <div class="action">
-                <div class="action-head">Call to action!It's time</div>
-                <div class="action-sub">Sign up for our product by clicking that button right over there!</div>
+                <div class="action-head">Call to action!It's time
+                Sign up for our product by clicking that button right over there!</div>
                 <button>Sign up</button>
             </div>
         </div>
