--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="footer">
-            <div class="foot-txt">Copyright © Mateus Santos 2025</div>
+            <div class="foot-txt">Copyright <span>©</span> Mateus Santos 2025</div>
         </div>
     </body>
 </html>
