--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
         </div>
         <div class="action-con">
             <div class="action">
-                <div class="action-head">Call to action!It's time
-                Sign up for our product by clicking that button right over there!</div>
-                <button>Sign up</button>
+                <div class="action-hold">
+                    <div class="action-head">Call to action! It's time!</div>
+                    <div class="action-sec">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="one">Sign up</button>
             </div>
         </div>
         <div class="footer">
