--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="header">
-            <div class="logo">LOGO</div>
+            <div class="logo">MY AWESOME FAMILY</div>
             <ul>
                 <li><a href="#">I</a></li>
                 <li><a href="#">Love</a></li>
