Add family image to hero section
Added a picture at the img holder on the hero
section, also made the background color a comment
so it can't be seen, and it was interfering with
the img.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button>Sign up</button>
             </div>
             <div class="img-hold">
-                <div>this is a place holder for an image</div>
+                <img src="img/family.jpg" alt="An image of my lovely family" width="500px" height="auto">
             </div>
         </div>
         <div class="memo-head">Our best memories</div>
