Change hero subtext and hero button text
Changed the hero subtext to a brief talk about
my family and how they motivate me.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="hero">
             <div class="hero-txt">
                 <div class="main-txt">This family is awesome</div>
-                <div class="sec-txt">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                <button>Sign up</button>
+                <div class="sec-txt">This is the family me and my wife built, they are the reason of my joy and the fuel that keeps me going everyday!</div>
+                <button>Send love</button>
             </div>
             <div class="img-hold">
                 <img src="img/family.jpg" alt="An image of my lovely family" width="500px" height="auto">
