Add 2 img and description to memories section
Addded 2 img from two good memories from my
daughter.

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <div class="memo-head">Our best memories</div>
         <div class="content">
             <div class="info">
-                <div class="memo-img"></div>
-                <div class="img-txt">This is some subtext under an illustration or image</div>
+                <img class="memo-img" src="img/school.jpg" alt="Our daughter on her first day of school" width="240px" height="auto">
+                <div class="img-txt">Our daughter on her first day of school, how awesome!</div>
             </div>
             <div class="info">
-                <div class="memo-img"></div>
-                <div class="img-txt">This is some subtext under an illustration or image</div>
+                <img class="memo-img" src="img/nature.jpg" alt="Our daughter loving the nature" width="240px" height="439.328">
+                <div class="img-txt">Our daughter with her never ending love for nature.</div>
             </div>
             <div class="info">
                 <div class="memo-img"></div>
