Add one img and description to memories
Added the last picture before baby boy was born
in the memories section.

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
         <div class="memo-head">Our best memories</div>
         <div class="content">
             <div class="info">
-                <img class="memo-img" src="img/school.jpg" alt="Our daughter on her first day of school" width="240px" height="auto">
+                <img class="memo-img" src="img/school.jpg" alt="Our daughter on her first day of school" width="240px" height="439px">
                 <div class="img-txt">Our daughter on her first day of school, how awesome!</div>
             </div>
             <div class="info">
-                <img class="memo-img" src="img/nature.jpg" alt="Our daughter loving the nature" width="240px" height="439.328">
+                <img class="memo-img" src="img/nature.jpg" alt="Our daughter loving the nature" width="240px" height="439px">
                 <div class="img-txt">Our daughter with her never ending love for nature.</div>
             </div>
             <div class="info">
-                <div class="memo-img"></div>
-                <div class="img-txt">This is some subtext under an illustration or image</div>
+                <img class="memo-img" src="img/boy.jpg" alt="The last picture of when our baby boy was in the oven" width="240px" height="439px">
+                <div class="img-txt">Here our baby boy was getting ready to leave, we just didn't know how soon!</div>
             </div>
             <div class="info">
                 <div class="memo-img"></div>
