Add img and description to memories section
Added an image to when our baby boy came to this
world

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <div class="img-txt">Here our baby boy was getting ready to leave, we just didn't know how soon!</div>
             </div>
             <div class="info">
-                <div class="memo-img"></div>
-                <div class="img-txt">This is some subtext under an illustration or image</div>
+                <img class="memo-img" src="img/born.jpg" alt="Image of when our baby boy came to this world" width="240px" height="439px">
+                <div class="img-txt">And less than 24 hours later from the previous picture our boy came to this world.</div>
             </div>
         </div>
         <div class="quote">
