Change the quote
Changed the quote to a family loving quote.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </div>
         </div>
         <div class="quote">
-            <div class="quote-txt">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? I all know is that it looks nice.</div>
-            <div class="quote-author">-Thor, God of Thunder</div>
+            <div class="quote-txt">Being a family means you are a part of something very wonderful. It means you will love and be loved for the rest of your life.</div>
+            <div class="quote-author">-Lisa Weed</div>
         </div>
         <div class="action-con">
             <div class="action">
