Change the content on action section
Changed the content on the action to fit the
subject of the page.

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <div class="action-con">
             <div class="action">
                 <div class="action-hold">
-                    <div class="action-head">Call to action! It's time!</div>
-                    <div class="action-sec">Sign up for our product by clicking that button right over there!</div>
+                    <div class="action-head">Our family sends love to those who read this.</div>
+                    <div class="action-sec">If you wish to send us love too fell free to do it by clicking the button on the right!</div>
                 </div>
-                <button class="one">Sign up</button>
+                <button class="one">Send love</button>
             </div>
         </div>
         <div class="footer">
